--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,12 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #ViewResolver Properties
 spring.mvc.view.prefix =/WEB-INF/views/
-spring mvc.view.suffix =.jsp
+spring.mvc.view.suffix =.jsp
 
 #Server Properties
 server.servlet.context-path=/Bookstore
 server.port=8080
+
+#Spring Security credentials
+spring.security.user.name=user
+spring.security.user.password=1234
