admin login page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource Properties
-spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?serverTimezone=Europe/Athens
-spring.datasource.username = root
-spring.datasource.password = 2310451622
+spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.amazonaws.com:3306/Bookstore?serverTimezone=Europe/Athens
+spring.datasource.username = developer
+spring.datasource.password = kohyai4BioMashi
 
 #Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -13,9 +13,9 @@ spring.mvc.view.prefix =/WEB-INF/views/
 spring.mvc.view.suffix =.jsp
 
 #Server Properties
-server.servlet.context-path=/Bookstore
+server.servlet.context-path=/bookstore
 server.port=8080
 
-#Spring Security credentials
-spring.security.user.name=user
-spring.security.user.password=1234
+##Spring Security placeholder credentials
+#spring.security.user.name=user
+#spring.security.user.password=1234
