1. Visitor Homepage created. 2. WebSecurityConfig completed for all roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DataSource Properties
 spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.amazonaws.com:3306/Bookstore?serverTimezone=Europe/Athens
-spring.datasource.username = developer
-spring.datasource.password = kohyai4BioMashi
+spring.datasource.username = application
+spring.datasource.password = iengooDe2ook
 
 #Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
