--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>bookstore</groupId>
     <artifactId>bookstore</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>project</name>
+    <name>bookstore</name>
     <description>Team project</description>
     <properties>
         <java.version>1.8</java.version>
