--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <!--automatically restarts our application when code is updated -->
             <artifactId>spring-boot-devtools</artifactId>
             <scope>runtime</scope>
             <optional>true</optional>
