--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.am
 spring.datasource.username = application
 spring.datasource.password = iengooDe2ook
 
+
 #Hibernate Properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql = true
@@ -14,7 +15,8 @@ spring.mvc.view.suffix =.jsp
 
 #Server Properties
 server.servlet.context-path=/bookstore
-server.port=8080
+server.port=8081
+#spring.main.web-application-type=none
 
 ##Spring Security placeholder credentials
 #spring.security.user.name=user
