Added countries as dropdown list in customer register/create

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,7 @@ server.port=8080
 ##Spring Security placeholder credentials
 #spring.security.user.name=user
 #spring.security.user.password=1234
+
+
+#spring.mvc.format.date=yyyy-MM-dd
+#spring.mvc.format.date-time=iso
