Started with cart index

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ server.port=8080
 
 #spring.mvc.format.date=yyyy-MM-dd
 #spring.mvc.format.date-time=iso
+
+#@DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+#@DateTimeFormat(pattern = "yyyy-MM-dd")
