--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-#DataSource Properties
-spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.amazonaws.com:3306/Bookstore?serverTimezone=Europe/Athens
-spring.datasource.username = application
-spring.datasource.password = iengooDe2ook
+
+#Local DB DataSource Properties
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?serverTimezone=Europe/Athens
+spring.datasource.username = root
+spring.datasource.password = 2310451622
+
+
+#Remote DB DataSource Properties
+#spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.amazonaws.com:3306/Bookstore?serverTimezone=Europe/Athens
+#spring.datasource.username = application
+#spring.datasource.password = iengooDe2ook
 
 
 #Hibernate Properties
@@ -17,7 +25,6 @@ spring.mvc.view.suffix =.jsp
 server.servlet.context-path=/bookstore
 server.port=8080
 
-<<<<<<< HEAD
 
 ##Spring Security placeholder credentials
 #spring.security.user.name=user
@@ -36,5 +43,3 @@ STRIPE_SECRET_KEY = sk_test_51IcvVTLdnHSy3Dj9bWOsAC2AoGSGj0t9FkUcQ4Vu8zza0zKBQLf
 
 
 security.enable.csrf=false
-=======
->>>>>>> stathis-branch
