Complete rewrite of CSS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 
-#Local DB DataSource Properties
-spring.jpa.hibernate.ddl-auto=create
+#Local DB DataSource
+
+# Uncomment this line if you want to create db schema from Spring Data JPA (i.e. from entity classes of this project)
+#spring.jpa.hibernate.ddl-auto=create
+
 spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?serverTimezone=Europe/Athens
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = 2310451622
+spring.datasource.password = gnosis451622
 
 
-#Remote DB DataSource Properties
+#Remote DB DataSource
 #spring.datasource.url = jdbc:mysql://database-1.cpuhqgf0oxup.eu-central-1.rds.amazonaws.com:3306/Bookstore?serverTimezone=Europe/Athens
 #spring.datasource.username = application
 #spring.datasource.password = iengooDe2ook
@@ -24,7 +28,6 @@ spring.mvc.view.suffix =.jsp
 #Server Properties
 server.servlet.context-path=/bookstore
 server.port=8080
-
 
 ##Spring Security placeholder credentials
 #spring.security.user.name=user
