--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?serverTimezone=Europe/Athens
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
 spring.datasource.password = gnosis451622
 
