Changed password for root user in MySQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 #Local DB DataSource
 
 # Uncomment this line if you want to create db schema from Spring Data JPA (i.e. from entity classes of this project)
-spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url = jdbc:mysql://localhost:3306/bookstore?serverTimezone=Europe/Athens
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username = root
-spring.datasource.password = gnosis451622
+spring.datasource.password = 1234
 
 
 #Remote DB DataSource
